justeringer for bokklubben design mock

--- a/less/_alerts.less
+++ b/less/_alerts.less
@@ -1,24 +1,24 @@
 .alert {
-    border: 0;
+    border: 0px;
     border-radius: 0;
 
     // SASS conversion note: please mirror any content change in _mixins-shared.scss alert-variations-content
-    .generic-variations(~".alert", ~"", @mdb-text-color-light, {
-        background-color: @variation-color;
-        color: @variation-color-text;
+    .generic-variations(~"", @darkbg-text, {
+        background-color: @mdb-color;
+        color: @mdb-text-color;
 
         a, .alert-link {
-            color: @variation-color-text;
+            color: @mdb-text-color;
         }
     });
 
     &-info, &-danger, &-warning, &-success {
-        color: @mdb-text-color-light;
+        color: @darkbg-text;
     }
 
     &-default {
         a, .alert-link {
-            color: @mdb-text-color-primary;
+            color: @lightbg-text;
         }
     }
 }
