--- a/less/_cards.less
+++ b/less/_cards.less
@@ -19,7 +19,7 @@
     /**************************************************************************/
 
 
-    border-radius: @border-radius-base;
+    border-radius: 2px;
     color: @mdb-card-body-text;
     background: @mdb-card-body-background;
 
