--- a/less/_inputs.less
+++ b/less/_inputs.less
@@ -1,11 +1,5 @@
 @import '_inputs-size.less';
 
-// label variations
-.label {
-  border-radius: @border-radius-small;
-  .variations(~".label", ~"", background-color, @grey);
-}
-
 // must be broken out for reuse - webkit selector breaks firefox
 .label-static(@label-top, @static-font-size, @static-line-height) {
   label.control-label {
@@ -50,7 +44,7 @@
   }
 
   .help-block {
-    margin-top: 0; // allow the input margin to set-off the top of the help-block
+    margin-top: 0px; // allow the input margin to set-off the top of the help-block
     font-size: @help-block-font-size;
   }
 }
@@ -190,12 +184,6 @@
     }
   }
 
-  // hint to browser for optimization
-  //    TODO: evaluate effectiveness - looking for community feedback
-  &.label-floating label.control-label {
-    will-change: left, top, contents;
-  }
-
   // hide label-placeholders when the field is not empty
   &.label-placeholder:not(.is-empty){
     label.control-label{
@@ -241,6 +229,11 @@
       display: block;
     }
   }
+
+  // SASS conversion note: please mirror any content change in _mixins-shared.scss bg-img-variations-content
+  .generic-variations(~".is-focused .form-control", @brand-primary, {
+    background-image: linear-gradient(@mdb-color, @mdb-color), linear-gradient(@mdb-input-underline-color, @mdb-input-underline-color);
+  });
 
   .form-group-validation-state(has-warning, @brand-warning);
   .form-group-validation-state(has-error, @brand-danger);
