--- a/less/_mixins-fullpalette.less
+++ b/less/_mixins-fullpalette.less
@@ -10,7 +10,6 @@
 // @mdb-text-color ---> rgba(255,255,255,0.84), rgba(0,0,0,0.84), rgba(255,255,255,0.84) ...
 //
 
-
 .generic-variations(@extra, @default, @func) {
 
   @contrast-factor: 40%;
@@ -96,6 +95,20 @@
     }
 
     .generic-variations-factory-deep(~"");
+    .generic-variations-factory-deep(~"-50");
+    .generic-variations-factory-deep(~"-100");
+    .generic-variations-factory-deep(~"-200");
+    .generic-variations-factory-deep(~"-300");
+    .generic-variations-factory-deep(~"-400");
+    .generic-variations-factory-deep(~"-500");
+    .generic-variations-factory-deep(~"-600");
+    .generic-variations-factory-deep(~"-700");
+    .generic-variations-factory-deep(~"-800");
+    .generic-variations-factory-deep(~"-900");
+    .generic-variations-factory-deep(~"-A100");
+    .generic-variations-factory-deep(~"-A200");
+    .generic-variations-factory-deep(~"-A400");
+    .generic-variations-factory-deep(~"-A700");
   }
 
   .generic-variations-factory(~"red");
