--- a/less/_navbar.less
+++ b/less/_navbar.less
@@ -1,7 +1,7 @@
 .navbar {
   background-color: @brand-primary;
-  border: 0;
-  border-radius: 0;
+  border: @zero;
+  border-radius: @zero;
 
   .navbar-brand {
     position: relative;
@@ -54,7 +54,7 @@
 
   // Darken the responsive nav toggle
   .navbar-toggle {
-    border: 0;
+    border: @zero;
     &:hover,
     &:focus {
       background-color: transparent;
@@ -96,7 +96,7 @@
       // Dropdowns get custom display
       .open .dropdown-menu {
         > .dropdown-header {
-          border: 0;
+          border: @zero;
           color: inherit;
         }
         .divider {
@@ -185,34 +185,31 @@
   }
 
   // SASS conversion note: please mirror any content change in _mixins-shared.scss navbar-variations-content
-  .generic-variations(~".navbar", ~"", @brand-primary, {
-    background-color: @variation-color;
-    color: @variation-color-text;
+  .generic-variations(~".navbar", @brand-primary, {
+    background-color: @mdb-color;
+    color: @mdb-text-color;
     // deeply defined to override welljumbo class without !impotant need
-    .navbar-form .form-group input.form-control,
-    .navbar-form input.form-control {
-      .material-placeholder({
-        color: @variation-color-text;
-      });
+    .navbar-form .form-group input.form-control::placeholder, .navbar-form input.form-control::placeholder {
+      color: @mdb-text-color;
     }
     .dropdown-menu {
-      border-radius: @border-radius-base;
+      border-radius: @mdb-dropdown-radius;
       li > a {
         font-size: @mdb-dropdown-font-size;
         padding: 13px 16px;
         &:hover,
         &:focus {
-          color: @variation-color;
+          color: @mdb-color;
           background-color: @grey-200;
         }
       }
       .active > a {
         &:hover,
         &:focus {
-          color: @variation-color-text;
+          color: @mdb-text-color;
         }
-        background-color: @variation-color;
-        color: @variation-color-text;
+        background-color: @mdb-color;
+        color: @mdb-text-color;
       }
     }
   });
