--- a/less/_panels.less
+++ b/less/_panels.less
@@ -2,18 +2,18 @@
   border-radius: 2px;
   border: 0;
 
-  .variations(~".panel", ~" > .panel-heading", background-color, @grey-200);
+  .variations(~" > .panel-heading", background-color, @grey-200);
   .shadow-z-1;
 }
 
 
 [class*="panel-"] > .panel-heading {
-  color: @mdb-text-color-light;
+  color: @darkbg-text;
   border: 0;
 }
 .panel-default, .panel:not([class*="panel-"]) {
   > .panel-heading {
-    color: @mdb-text-color-primary;
+    color: @lightbg-text;
   }
 }
 .panel-footer {
