--- a/less/_plugin-nouislider.less
+++ b/less/_plugin-nouislider.less
@@ -25,9 +25,9 @@
 .noUi-stacking .noUi-handle {
     z-index: 10;
 }
-//.noUi-stacking + .noUi-origin {
-//    *z-index: -1;
-//} WARNING: Property with star prefix found. Checks for the star property hack (targets IE6/7) (star-property-hack) Browsers: All
+.noUi-stacking + .noUi-origin {
+    *z-index: -1;
+}
 .noUi-state-tap .noUi-origin {
     transition: left 0.3s, top 0.3s;
 }
@@ -76,7 +76,7 @@
     }
 }
 .noUi-target {
-    border-radius: @border-radius-base;
+    border-radius: 2px;
 }
 .noUi-horizontal {
     height: 2px;
@@ -103,8 +103,8 @@
 }
 
 .slider {
-    .variations(~".slider", ~".noUi-connect", background-color, @brand-primary);
-    .variations(~".slider", ~" .noUi-connect", background-color, @brand-primary);
-    .variations(~".slider", ~" .noUi-handle", background-color, @brand-primary);
-    .variations(~".slider", ~" .noUi-handle", border-color, @brand-primary);
+    .variations(~".noUi-connect", background-color, @brand-primary);
+    .variations(~" .noUi-connect", background-color, @brand-primary);
+    .variations(~" .noUi-handle", background-color, @brand-primary);
+    .variations(~" .noUi-handle", border-color, @brand-primary);
 }
