--- a/less/_plugin-selectize.less
+++ b/less/_plugin-selectize.less
@@ -33,8 +33,8 @@
         }
         input {
             font-size: 14px;
-            outline: 0;
-            border: 0;
+            outline: 0px;
+            border: 0px;
             background: transparent;
         }
         &.label-floating-fix input {
@@ -68,7 +68,7 @@
         height: auto;
         background-color: #FFF;
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-        border-radius: @border-radius-base;
+        border-radius: 2px;
         padding: 0;
         margin-top: 3px;
         .active {
