--- a/less/_plugin-snackbarjs.less
+++ b/less/_plugin-snackbarjs.less
@@ -4,9 +4,9 @@
 .snackbar {
     // Style
     background-color: #323232;
-    color: @mdb-text-color-light;
+    color: @darkbg-text;
     font-size: 14px;
-    border-radius: @border-radius-base;
+    border-radius: 2px;
     .shadow-z-1;
 
     // Animation
