--- a/less/_popups.less
+++ b/less/_popups.less
@@ -3,7 +3,7 @@
   line-height: 1em;
   background: @mdb-popover-background;
   border: none;
-  border-radius: @border-radius-base;
+  border-radius: @mdb-border-radius;
   .shadow-z-1();
 }
 
