--- a/less/_progress.less
+++ b/less/_progress.less
@@ -5,6 +5,6 @@
     background: #c8c8c8;
     .progress-bar {
         box-shadow: none;
-        .variations(~".progress-bar", ~"", background-color, @brand-primary);
+        .variations(~"", background-color, @brand-primary);
     }
 }
